# openCL-game-of-life

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CalcStep.cl  CalcStepGroups.cl  parallel-conway.cpp
